created delete buttons

--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
   <header>
     <h1>To Do</h1>
   </header>
+
   <body>
     <ul>
-      <li>Walk the dogs</li>
-      <li>Buy chicken quesedillas</li>
-      <li>Do yoga</li>
+      <li>Walk the dogs
+        <button>Delete</button></li>
+      <li>Buy chicken quesedillas
+        <button>Delete</button></li>
+      <li>Do yoga
+        <button>Delete</button></li>
+
     </ul>
+    <button></button>
   </body>
   <footer>
   </footer>
