created add new button

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   </header>
 
   <body>
+    <input type="text" placeholder="What needs to be done?"></input>
+    <button>Add new</button>
     <ul>
       <li>Walk the dogs
         <button>Delete</button></li>
