added ability to add new todo

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>To-Do</title>
+  <script src="app.js"></script>
 </head>
 <main>
   <header>
@@ -10,9 +11,9 @@
   </header>
 
   <body>
-    <input type="text" placeholder="What needs to be done?"></input>
-    <button>Add new</button>
-    <ul>
+    <input class="new-todo" type="text" placeholder="What needs to be done?"></input>
+    <button class="add-new">Add new</button>
+    <ul class="todo-list">
       <li>Walk the dogs
         <button>Delete</button></li>
       <li>Buy chicken quesedillas
@@ -21,7 +22,6 @@
         <button>Delete</button></li>
 
     </ul>
-    <button></button>
   </body>
   <footer>
   </footer>
