--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>To-Do</title>
-  <script src="app.js"></script>
+  <script src="app.js" type="module"></script>
 </head>
 <main>
   <header>
