reset form after new todo submit

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
   </header>
 
   <body>
-    <input class="new-todo" type="text" placeholder="What needs to be done?"></input>
-    <button class="add-new">Add new</button>
+    <form id="todoList-form">
+      <input class="new-todo" type="text" placeholder="What needs to be done?"></input>
+      <button class="add-new" type="submit">Add new</button>
+    </form>
     <ul class="todo-list">
     </ul>
   </body>
